src/test/ui/associated-types/hr-associated-type-bound-param-5.stderr
error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-5.rs:27:14
   |
LL | trait X<'a, T: Cycle + for<'b> X<'b, T>>
   |       - required by a bound in this
...
LL |     for<'b> <T::Next as X<'b, T::Next>>::U: Clone,
   |                                             ----- required by this bound in `X`
...
LL |     type U = str;
   |              ^^^ the trait `Clone` is not implemented for `str`

error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-5.rs:32:14
   |
LL | trait X<'a, T: Cycle + for<'b> X<'b, T>>
   |       - required by a bound in this
...
LL |     for<'b> <T::Next as X<'b, T::Next>>::U: Clone,
   |                                             ----- required by this bound in `X`
...
LL |     type U = str;
   |              ^^^ the trait `Clone` is not implemented for `str`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
